<resources>
    <string name="app_name">Custom Widgets</string>
    <string name="show_contact_button_text">Show Contacts</string>
      <string name="login_password">Password</string>
    <string name="login_edit_Username">Your Username</string>
    <string name="login_username">Username</string>
    <string name="login_submit">Login</string>
    <string name="login_edit_Password">Your Password</string>
    <string name="button_to_register_text">Register Now!</string>
    <string name="text_to_register">Not Registered?</string>
    <string name="text_to_login">Already Registered?</string>
    <string name="button_to_login_text">Login Now!</string>
    <string name="login_nickname">Nickname</string>
    <string name="login_edit_Nickname">Your Nickname</string>
    <string name="login_edit_confirmPassword">Confirm Your Password</string>
    <string name="login_confirmPassword">Password Confirmation</string>
    <string name="optional_image_input">Optional Image Input</string>
    <string name="select_image_from_gallery">Select Image from Gallery</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="BaseUrl">http://10.0.2.2:7127/api/</string>
    <string name="invalid_information">Invalid information!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>